@@ -1,3 +1,12 @@
+Pending changes in the mainline
+===============================
+
+* new "SenderTransferID" option when creating a transfer.  This id is added as an HTTP Header
+  ("sender-transfer-id") in every outgoing request that relates to this transfer and can be used 
+  e.g, by a load balancer to route all requests from a single transfer to the same Orthanc.
+  If no "SenderTransferID" is provided, a UUID is generated by the plugin.  This header is only 
+  used in PushMode
+
 Version 1.2 (2022-07-12)
 ========================
 
